--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"husky": "^9.1.7",
 		"lint-staged": "^16.2.7",
 		"lockfile-lint": "^4.14.1",
+		"npm-check-updates": "^19.1.2",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.1",
