--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,8 +1,6 @@
 name: Check pull request
 on:
-  push:
-    branches-ignore:
-      - main
+  pull_request:
 env:
   NAME: console-frontend
   IMAGE_REPOSITORY: oci://europe-north1-docker.pkg.dev/nais-io/nais
@@ -14,8 +12,8 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm"
+          node-version: '20'
+          cache: 'npm'
       - name: Install dependencies
         run: npm ci
       - name: Lockfile lint
@@ -33,8 +31,8 @@ jobs:
 
   build_push:
     permissions:
-      contents: "read"
-      id-token: "write"
+      contents: 'read'
+      id-token: 'write'
     name: Build and push
     runs-on: ubuntu-latest
     steps:
@@ -47,9 +45,9 @@ jobs:
           workload_identity_provider: ${{ secrets.NAIS_IO_WORKLOAD_IDENTITY_PROVIDER }}
           push: true
       - uses: azure/setup-helm@v4
-        name: "Setup Helm"
+        name: 'Setup Helm'
         with:
-          version: "3.8.0"
+          version: '3.8.0'
       - name: Build Chart
         run: |-
           sed -i "s/^version: .*/version: ${{ steps.build-push-sign.outputs.version }}/g" charts/Chart.yaml
