fix: add condition to skip build_push job for dependabot

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -31,6 +31,7 @@ jobs:
         run: helm lint --strict ./charts
 
   build_push:
+    if: github.actor != 'dependabot[bot]'
     permissions:
       contents: "read"
       id-token: "write"
