chore: enforce double quotes in YAML files
- Add Prettier override to use double quotes for YAML files
- Reformat all YAML files to use double quotes consistently
- Fixes recurring formatting issues in GitHub workflows

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,27 +5,27 @@
 
 version: 2
 updates:
-  - package-ecosystem: 'npm' # See documentation for possible values
-    directory: '/' # Location of package manifests
+  - package-ecosystem: "npm" # See documentation for possible values
+    directory: "/" # Location of package manifests
     schedule:
-      interval: 'weekly'
+      interval: "weekly"
     cooldown:
       default-days: 14
     groups:
       npm:
         patterns:
-          - '*'
+          - "*"
 
   - package-ecosystem: github-actions
-    directory: '/'
+    directory: "/"
     schedule:
-      interval: 'weekly'
+      interval: "weekly"
     cooldown:
       default-days: 14
 
-  - package-ecosystem: 'docker'
-    directory: '/'
+  - package-ecosystem: "docker"
+    directory: "/"
     schedule:
-      interval: 'weekly'
+      interval: "weekly"
     cooldown:
       default-days: 14
