--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,8 @@
 	"trailingComma": "none",
 	"printWidth": 100,
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [
+		{ "files": "*.svelte", "options": { "parser": "svelte" } },
+		{ "files": ["*.yaml", "*.yml"], "options": { "singleQuote": false } }
+	]
 }
