fix: update paths in storybook-pages workflow for better file tracking

--- a/.github/workflows/storybook-pages.yaml
+++ b/.github/workflows/storybook-pages.yaml
@@ -3,6 +3,12 @@ on:
   push:
     branches:
       - "main"
+    paths:
+      - "src/**/*.svelte"
+      - "src/**/*.stories.*"
+      - ".storybook/**"
+      - "package.json"
+      - "package-lock.json"
 
 permissions:
   contents: read
