chore: update devcontainer and workflow for improved setup and synchronization

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,7 @@
 			"onAutoForward": "notify"
 		}
 	},
-	"postCreateCommand": "npm install && npx allow-scripts auto",
+	"postCreateCommand": "npm install && npx allow-scripts auto && npm run prepare",
 	"remoteUser": "node",
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {}
