--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
 		"@lavamoat/preinstall-always-fail": "^2.1.1",
 		"@layerstack/utils": "^2.0.0-next.16",
 		"@nais/ds-svelte-community": "^2.0.0-next.4",
-		"@storybook/addon-docs": "10.1.3",
+		"@storybook/addon-docs": "10.1.4",
 		"@storybook/addon-svelte-csf": "^5.0.10",
-		"@storybook/addon-themes": "10.1.3",
-		"@storybook/sveltekit": "10.1.3",
+		"@storybook/addon-themes": "10.1.4",
+		"@storybook/sveltekit": "10.1.4",
 		"@sveltejs/adapter-node": "^5.4.0",
 		"@sveltejs/kit": "^2.49.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
@@ -49,7 +49,7 @@
 		"date-fns": "^4.1.0",
 		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-storybook": "10.1.3",
+		"eslint-plugin-storybook": "^10.1.4",
 		"eslint-plugin-svelte": "^3.13.0",
 		"globals": "^16.5.0",
 		"houdini": "^2.0.0-next.11",
@@ -59,17 +59,17 @@
 		"lockfile-lint": "^4.14.1",
 		"npm-check-updates": "^19.1.2",
 		"npq": "^3.15.2",
-		"prettier": "^3.7.3",
+		"prettier": "^3.7.4",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.2",
-		"storybook": "10.1.3",
-		"svelte": "^5.45.3",
+		"storybook": "10.1.4",
+		"svelte": "^5.45.4",
 		"svelte-check": "^4.3.4",
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.48.1",
 		"vite": "^7.2.6",
-		"vitest": "^4.0.14"
+		"vitest": "^4.0.15"
 	},
 	"type": "module",
 	"dependencies": {
