--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"date-fns": "^4.1.0",
 		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-storybook": "^10.1.10",
+		"eslint-plugin-storybook": "10.1.10",
 		"eslint-plugin-svelte": "^3.13.1",
 		"globals": "^16.5.0",
 		"houdini": "^2.0.0-next.11",
