feat: add upgrade script for Storybook version management
- Introduced a new npm script "upgrade-storybook" in package.json to facilitate upgrading Storybook to a specified version.
- Created a new script file "upgrade-storybook.mjs" that handles the upgrade process, including running necessary commands and formatting the package-lock.json file.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"test": "vitest",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
+		"upgrade-storybook": "node upgrade-storybook.mjs",
 		"lint-staged": "lint-staged",
 		"lockfile-lint": "lockfile-lint --path package-lock.json",
 		"unused": "node find-unused-gql.mjs && echo '---' && node find-missing-css-vars.mjs"
