--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,9 @@
 			"source.organizeImports": "explicit"
 		}
 	},
-	"editor.insertSpaces": false
+	"editor.insertSpaces": false,
+	"chat.tools.terminal.autoApprove": {
+		"npm run generate": true,
+		"npx houdini": true
+	}
 }
