--- a/charts/templates/ingress.yaml
+++ b/charts/templates/ingress.yaml
@@ -7,6 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
     nginx.ingress.kubernetes.io/configuration-snippet: |
       more_set_headers "X-Robots-Tag: noindex";
+    prometheus.io/path: /isAlive
+    prometheus.io/scrape: "true"
 spec:
   ingressClassName: 'nais-ingress-external'
   rules:
