--- a/package.json
+++ b/package.json
@@ -28,19 +28,19 @@
 		"unused": "node find-unused-gql.mjs && echo '---' && node find-missing-css-vars.mjs"
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^5.0.0",
+		"@chromatic-com/storybook": "^5.0.1",
 		"@eslint/compat": "^2.0.2",
 		"@eslint/js": "^9.39.2",
 		"@lavamoat/allow-scripts": "^3.4.2",
 		"@lavamoat/preinstall-always-fail": "^2.1.1",
 		"@layerstack/utils": "^2.0.0-next.18",
 		"@nais/ds-svelte-community": "^2.0.0-next.6",
-		"@storybook/addon-docs": "10.2.3",
+		"@storybook/addon-docs": "10.2.7",
 		"@storybook/addon-svelte-csf": "^5.0.10",
-		"@storybook/addon-themes": "10.2.3",
-		"@storybook/sveltekit": "10.2.3",
+		"@storybook/addon-themes": "10.2.7",
+		"@storybook/sveltekit": "10.2.7",
 		"@sveltejs/adapter-node": "^5.5.2",
-		"@sveltejs/kit": "^2.50.1",
+		"@sveltejs/kit": "^2.52.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@tailwindcss/vite": "^4.1.18",
 		"@types/d3-array": "^3.2.2",
@@ -48,9 +48,9 @@
 		"@types/luxon": "^3.7.1",
 		"@types/sortablejs": "^1.15.9",
 		"date-fns": "^4.1.0",
-		"eslint": "^9.39.2",
+		"eslint": "^10.0.0",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-storybook": "10.2.3",
+		"eslint-plugin-storybook": "^10.2.7",
 		"eslint-plugin-svelte": "^3.14.0",
 		"eslint-plugin-unicorn": "^62.0.0",
 		"globals": "^17.3.0",
@@ -65,8 +65,8 @@
 		"prettier": "^3.8.1",
 		"prettier-plugin-svelte": "^3.4.1",
 		"prettier-plugin-tailwindcss": "^0.7.2",
-		"storybook": "10.2.3",
-		"svelte": "^5.49.1",
+		"storybook": "10.2.7",
+		"svelte": "^5.51.5",
 		"svelte-check": "^4.3.6",
 		"tailwindcss": "^4.1.18",
 		"typescript": "^5.9.3",
@@ -79,7 +79,7 @@
 		"@codemirror/language": "^6.12.1",
 		"@codemirror/state": "^6.5.4",
 		"@codemirror/theme-one-dark": "^6.1.3",
-		"@codemirror/view": "^6.39.12",
+		"@codemirror/view": "^6.39.13",
 		"@prometheus-io/codemirror-promql": "^0.308.0",
 		"@slack/types": "^2.19.0",
 		"@slack/web-api": "^7.13.0",
