--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
 		"@lavamoat/preinstall-always-fail": "^2.1.1",
 		"@layerstack/utils": "^2.0.0-next.18",
 		"@nais/ds-svelte-community": "^2.0.0-next.6",
-		"@storybook/addon-docs": "10.2.7",
+		"@storybook/addon-docs": "^10.2.10",
 		"@storybook/addon-svelte-csf": "^5.0.10",
-		"@storybook/addon-themes": "10.2.7",
-		"@storybook/sveltekit": "10.2.7",
+		"@storybook/addon-themes": "^10.2.10",
+		"@storybook/sveltekit": "^10.2.10",
 		"@sveltejs/adapter-node": "^5.5.2",
 		"@sveltejs/kit": "^2.52.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
@@ -50,7 +50,7 @@
 		"date-fns": "^4.1.0",
 		"eslint": "^10.0.0",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-storybook": "^10.2.7",
+		"eslint-plugin-storybook": "^10.2.10",
 		"eslint-plugin-svelte": "^3.14.0",
 		"eslint-plugin-unicorn": "^62.0.0",
 		"globals": "^17.3.0",
@@ -65,8 +65,8 @@
 		"prettier": "^3.8.1",
 		"prettier-plugin-svelte": "^3.4.1",
 		"prettier-plugin-tailwindcss": "^0.7.2",
-		"storybook": "10.2.7",
-		"svelte": "^5.51.5",
+		"storybook": "^10.2.10",
+		"svelte": "^5.53.0",
 		"svelte-check": "^4.3.6",
 		"tailwindcss": "^4.1.18",
 		"typescript": "^5.9.3",
