--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"prettier": "3.8.1",
 		"prettier-plugin-svelte": "3.4.1",
 		"prettier-plugin-tailwindcss": "0.7.2",
+		"semver": "7.7.3",
 		"storybook": "10.2.7",
 		"svelte": "5.53.3",
 		"svelte-check": "4.3.6",
